Fixed cap close button was misaligned

--- a/src/components/modal/_modal.scss
+++ b/src/components/modal/_modal.scss
@@ -325,7 +325,7 @@
     }
   }
 
-  .btn-close {
+  > .btn-close {
     position: absolute;
     right: 0;
     top: 0;
